// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBanner should render correctly with hidden close button 1`] = `
<div
  aria-label="banner"
  className="mondayAlertBanner monday-alert-banner mondayAlertBannerBackgroundColorPrimary monday-alert-banner--background-color-primary"
  data-testid="alert-banner"
  role="banner"
>
  <div
    className="mondayAlertBannerInner monday-alert-banner__inner"
  />
  <div
    className="mondayAlertBannerCloseButtonWrapper monday-alert-banner__close-button-wrapper"
  />
</div>
`;

exports[`AlertBanner should render correctly with props 1`] = `
<div
  aria-label="lorem-banner"
  className="my-lorem-ipsum-banner mondayAlertBanner monday-alert-banner mondayAlertBannerBackgroundColorNegative monday-alert-banner--background-color-negative"
  data-testid="alert-banner"
  role="banner"
>
  <div
    className="mondayAlertBannerInner monday-alert-banner__inner"
  >
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item mondayAlertBannerInnerItemText monday-alert-banner__inner-item-text"
    >
      <div
        className="mondayAlertBannerEllipsis monday-alert-banner__ellipsis"
      >
        <div
          className="bannerText monday-style-alert-banner-text"
        >
          <span>
            Lorem ipsum dolor sit amet
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mondayAlertBannerCloseButtonWrapper monday-alert-banner__close-button-wrapper"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
  </div>
</div>
`;

exports[`AlertBanner should render correctly without props 1`] = `
<div
  aria-label="banner"
  className="mondayAlertBanner monday-alert-banner mondayAlertBannerBackgroundColorPrimary monday-alert-banner--background-color-primary"
  data-testid="alert-banner"
  role="banner"
>
  <div
    className="mondayAlertBannerInner monday-alert-banner__inner"
  />
  <div
    className="mondayAlertBannerCloseButtonWrapper monday-alert-banner__close-button-wrapper"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
  </div>
</div>
`;

exports[`AlertBanner should render with correctly with multiple elements 1`] = `
<div
  aria-label="banner"
  className="mondayAlertBanner monday-alert-banner mondayAlertBannerBackgroundColorPrimary monday-alert-banner--background-color-primary"
  data-testid="alert-banner"
  role="banner"
>
  <div
    className="mondayAlertBannerInner monday-alert-banner__inner"
  >
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item mondayAlertBannerInnerItemText monday-alert-banner__inner-item-text"
    >
      <div
        className="mondayAlertBannerEllipsis monday-alert-banner__ellipsis"
      >
        <div
          className="bannerText monday-style-alert-banner-text"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit
          </span>
        </div>
      </div>
    </div>
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item"
    >
      <div
        className="bannerLinkMarginLeft monday-style-alert-banner-link-margin-left"
        data-testid="alert-banner-link"
        id=""
      >
        <a
          aria-label=""
          aria-labelledby=""
          className="monday-style-link bannerLink monday-style-alert-banner-link"
          href="https://monday.com"
          id=""
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="monday-style-link--text"
          >
            Lorem ipsum
          </span>
        </a>
      </div>
    </div>
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item mondayAlertBannerInnerItemText monday-alert-banner__inner-item-text"
    >
      <div
        className="mondayAlertBannerEllipsis monday-alert-banner__ellipsis"
      >
        <div
          className="bannerText monday-style-alert-banner-text bannerTextMarginLeft monday-style-alert-banner-text-margin-left"
        >
          <span>
            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
          </span>
        </div>
      </div>
    </div>
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item"
    >
      <div
        className="bannerButtonMarginLeft monday-style-alert-banner-button-margin-left"
        data-testid="alert-banner-button"
      >
        <div
          data-onclick="onclick-provided"
          data-testid="cancel-button"
        />
      </div>
    </div>
  </div>
  <div
    className="mondayAlertBannerCloseButtonWrapper monday-alert-banner__close-button-wrapper"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
  </div>
</div>
`;

exports[`AlertBanner should render with correctly with text and link 1`] = `
<div
  aria-label="banner"
  className="mondayAlertBanner monday-alert-banner mondayAlertBannerBackgroundColorPrimary monday-alert-banner--background-color-primary"
  data-testid="alert-banner"
  role="banner"
>
  <div
    className="mondayAlertBannerInner monday-alert-banner__inner"
  >
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item mondayAlertBannerInnerItemText monday-alert-banner__inner-item-text"
    >
      <div
        className="mondayAlertBannerEllipsis monday-alert-banner__ellipsis"
      >
        <div
          className="bannerText monday-style-alert-banner-text"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
          </span>
        </div>
      </div>
    </div>
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item"
    >
      <div
        className="bannerLinkMarginLeft monday-style-alert-banner-link-margin-left"
        data-testid="alert-banner-link"
        id=""
      >
        <a
          aria-label=""
          aria-labelledby=""
          className="monday-style-link bannerLink monday-style-alert-banner-link"
          href="https://monday.com"
          id=""
          onClick={[Function]}
          rel="noreferrer"
          target="_blank"
        >
          <span
            className="monday-style-link--text"
          >
            Lorem ipsum
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    className="mondayAlertBannerCloseButtonWrapper monday-alert-banner__close-button-wrapper"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
  </div>
</div>
`;

exports[`AlertBanner should render with correctly with text and link 2`] = `
<div
  aria-label="banner"
  className="mondayAlertBanner monday-alert-banner mondayAlertBannerBackgroundColorPrimary monday-alert-banner--background-color-primary"
  data-testid="alert-banner"
  role="banner"
>
  <div
    className="mondayAlertBannerInner monday-alert-banner__inner"
  >
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item mondayAlertBannerInnerItemText monday-alert-banner__inner-item-text"
    >
      <div
        className="mondayAlertBannerEllipsis monday-alert-banner__ellipsis"
      >
        <div
          className="bannerText monday-style-alert-banner-text"
        >
          <span>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
          </span>
        </div>
      </div>
    </div>
    <div
      className="mondayAlertBannerInnerItem monday-alert-banner__inner-item"
    >
      <div
        className="bannerButtonMarginLeft monday-style-alert-banner-button-margin-left"
        data-testid="alert-banner-button"
      >
        <div
          data-onclick="onclick-provided"
          data-testid="cancel-button"
        />
      </div>
    </div>
  </div>
  <div
    className="mondayAlertBannerCloseButtonWrapper monday-alert-banner__close-button-wrapper"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
  </div>
</div>
`;
